@@ -202,39 +202,38 @@ class RemoteNmiTest < Test::Unit::TestCase
     response = @gateway.store(@credit_card, @options)
     assert_success response
     assert_equal 'Succeeded', response.message
-    assert response.params['customer_vault_id']
+    assert response.authorization.include?(response.params['customer_vault_id'])
   end
 
   def test_failed_store
     card = credit_card(year: 2010)
     response = @gateway.store(card, @options)
     assert_failure response
-    assert_nil response.params['customer_vault_id']
   end
 
   def test_successful_store_with_echeck
     response = @gateway.store(@check, @options)
     assert_success response
     assert_equal 'Succeeded', response.message
-    assert response.params['customer_vault_id']
+    assert response.authorization.include?(response.params['customer_vault_id'])
   end
 
   def test_successful_store_and_purchase
-    vault_id = @gateway.store(@credit_card, @options).params['customer_vault_id']
+    vault_id = @gateway.store(@credit_card, @options).authorization
     purchase = @gateway.purchase(@amount, vault_id, @options)
     assert_success purchase
     assert_equal 'Succeeded', purchase.message
   end
 
   def test_successful_store_and_auth
-    vault_id = @gateway.store(@credit_card, @options).params['customer_vault_id']
+    vault_id = @gateway.store(@credit_card, @options).authorization
     auth = @gateway.authorize(@amount, vault_id, @options)
     assert_success auth
     assert_equal 'Succeeded', auth.message
   end
 
   def test_successful_store_and_credit
-    vault_id = @gateway.store(@credit_card, @options).params['customer_vault_id']
+    vault_id = @gateway.store(@credit_card, @options).authorization
     credit = @gateway.credit(@amount, vault_id, @options)
     assert_success credit
     assert_equal 'Succeeded', credit.message
