@@ -20,6 +20,7 @@
 * ProPay: Send 9 digit zip code without dash [molbrown] #3129
 * Cecabank: Append error text to message [therufs] #3127
 * Adyen: Extend AVS code mappings [therufs] #3119
+* NMI: Add customer id to authorization on store [curiousepic] #3130
 
 == Version 1.90.0 (January 8, 2019)
 * Mercado Pago: Support "gateway" processing mode [curiousepic] #3087
